remove type password field

--- a/frontend/app/templates/components/encryptable/form.hbs
+++ b/frontend/app/templates/components/encryptable/form.hbs
@@ -115,7 +115,7 @@
                         <img class="d-inline-block position-absolute encrypted-icon"
                              src="/assets/images/encrypted_small.svg" alt="encrypted value">
                       </a>
-                      <el.control type="password" autocomplete="off" @name="cleartextPassword"
+                      <el.control autocomplete="off" @name="cleartextPassword"
                                   tabindex="2"></el.control>
                     </form.element>
                   </form.group>
