change html comments to eslint approved form

--- a/frontend/app/templates/components/encryptable/form.hbs
+++ b/frontend/app/templates/components/encryptable/form.hbs
@@ -89,7 +89,7 @@
                                   @property="cleartextUsername" @customError={{t
                       (validation-error-key this.changeset.error.cleartextUsername.validation)}} as |el|>
                       <a class="position-absolute encrypted-icon">
-                        <!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding-->
+                        {{!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding--}}
                         <BsTooltip @title={{t "encryptable/credentials.form.encryptedField"}} @delayShow="300" @viewportSelector="modal"/>
                         <img class="d-inline-block"
                              src="/assets/images/encrypted_small.svg" alt="encrypted value">
@@ -112,7 +112,7 @@
                                   @property="cleartextPassword" @customError={{t
                       (validation-error-key this.changeset.error.cleartextPassword.validation)}} as |el|>
                       <a class="position-absolute encrypted-icon">
-                        <!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding-->
+                        {{!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding--}}
                         <BsTooltip @title={{t "encryptable/credentials.form.encryptedField"}} @delayShow="300" @viewportSelector="modal"/>
                         <img class="d-inline-block"
                              src="/assets/images/encrypted_small.svg" alt="encrypted value">
@@ -144,7 +144,7 @@
                                   @property="cleartextToken" @customError={{t
                       (validation-error-key this.changeset.error.cleartextToken.validation)}} as |el|>
                       <a class="position-absolute encrypted-icon">
-                        <!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding-->
+                        {{!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding--}}
                         <BsTooltip @title={{t "encryptable/credentials.form.encryptedField"}} @delayShow="300" @viewportSelector="modal"/>
                         <img class="d-inline-block"
                              src="/assets/images/encrypted_small.svg" alt="encrypted value">
@@ -167,7 +167,7 @@
                                   @property="cleartextPin" @customError={{t
                       (validation-error-key this.changeset.error.cleartextPin.validation)}} as |el|>
                       <a class="position-absolute encrypted-icon">
-                        <!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding-->
+                        {{!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding--}}
                         <BsTooltip @title={{t "encryptable/credentials.form.encryptedField"}} @delayShow="300" @viewportSelector="modal"/>
                         <img class="d-inline-block"
                              src="/assets/images/encrypted_small.svg" alt="encrypted value">
@@ -190,7 +190,7 @@
                                   @property="cleartextEmail" @customError={{t
                       (validation-error-key this.changeset.error.cleartextEmail.validation)}} as |el|>
                       <a class="position-absolute encrypted-icon">
-                        <!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding-->
+                        {{!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding--}}
                         <BsTooltip @title={{t "encryptable/credentials.form.encryptedField"}} @delayShow="300" @viewportSelector="modal"/>
                         <img class="d-inline-block"
                              src="/assets/images/encrypted_small.svg" alt="encrypted value">
@@ -213,7 +213,7 @@
                                   @property="label" @customError={{t
                       (validation-error-key this.changeset.error.label.validation)}} as |el|>
                       <a class="position-absolute encrypted-icon">
-                        <!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding-->
+                        {{!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding--}}
                         <BsTooltip @title={{t "encryptable/credentials.form.notEncryptedField"}} @delayShow="300" @viewportSelector="modal"/>
                         <img class="d-inline-block"
                              src="/assets/images/not_encrypted_small.svg" alt="not encrypted value">
@@ -232,7 +232,7 @@
                                   @property="value" @customError={{t
                       (validation-error-key this.changeset.error.value.validation)}} as |el|>
                       <a class="position-absolute encrypted-icon">
-                        <!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding-->
+                        {{!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding--}}
                         <BsTooltip @title={{t "encryptable/credentials.form.encryptedField"}} @delayShow="300" @viewportSelector="modal"/>
                         <img class="d-inline-block"
                              src="/assets/images/encrypted_small.svg" alt="encrypted value">
