--- a/frontend/app/styles/encryptable-form.scss
+++ b/frontend/app/styles/encryptable-form.scss
@@ -44,10 +44,10 @@
   width: 100%;
   max-width: 100%;
   height: 35px;
-  margin-left: 4.5%;
+  margin-left: 5%;
 }
 
-.ember-basic-dropdown {
+.d-flex .ember-basic-dropdown {
   width: 36%;
   max-width: 36%;
 }
