Feature/657/file sharing (#658)

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -332,6 +332,10 @@ li a {
   padding-left: 0.5rem !important;
 }
 
+.lh-1 {
+  line-height: 1;
+}
+
 .lh-2 {
   line-height: 2;
 }
@@ -465,3 +469,4 @@ h5, h6 {
   align-content: center;
   text-align: center;
 }
+
