--- a/frontend/app/styles/nav-bar.scss
+++ b/frontend/app/styles/nav-bar.scss
@@ -55,6 +55,16 @@
   min-height: 100%;
 }
 
+.icon-share-file {
+  width: 24px;
+  padding-bottom: 1px;
+  margin-right: 5px;
+}
+
+.text-share-file {
+  color: #1E5A96;
+}
+
 @media screen and (max-width: 991px) {
   .content {
     width: 90%;
