--- a/frontend/app/templates/components/encryptable/row.hbs
+++ b/frontend/app/templates/components/encryptable/row.hbs
@@ -17,7 +17,7 @@
       </LinkTo>
 
       <div>
-        <img class="icon-medium-button d-inline" src="/assets/images/member.svg" alt="file icon">
+        <img class="icon-medium-button d-inline" src="/assets/images/member.svg" alt="person icon">
         <BsTooltip @title={{t "tooltips.sent_by"}} @delayShow="1000" />
       </div>
       <div class="col-5 d-none d-md-block">
@@ -40,58 +40,75 @@
   {{else}}
     <div class="row d-flex flex-row flex-md-row flex-lg-row flex-xl-row align-items-center bg-grey-2 rounded
     encryptable-entry">
+      {{#if this.isTransferredCredentials }}
+        <div class="mx-1">
+          <img class="icon-medium-button d-inline" src="/assets/images/key.svg" alt="key icon">
+        </div>
+      {{/if}}
       <LinkTo id="encryptable-row-title" class="d-flex align-items-center text-left col-12 col-md-3 col-lg-3
       col-xl-4 underline-hover break-words account-link" @route="encryptables.show" @model={{@encryptable.id}}>
         {{@encryptable.name}}
       </LinkTo>
-      {{#if (and (lte this.getAttributesAmount 2) (gt this.getAttributesAmount 0))}}
-        {{#if (is-included @encryptable.usedEncryptedDataAttrs "username")}}
-          <div class="encryptable-container d-none d-md-block d-lg-block d-xl-block ml-0 mr-md-2 ml-md-5 mr-lg-2 ml-lg-5 mr-xl-2 ml-xl-2">
-            <Encryptable::AttributeField @attribute="username" @row={{true}} @encryptable={{@encryptable}}
-                                         @visibleByDefault={{false}}/>
+      {{#if this.isTransferredCredentials }}
+          <div class="mx-1">
+            <img class="icon-medium-button d-inline" src="/assets/images/member.svg" alt="person icon">
+            <BsTooltip @title={{t "tooltips.sent_by"}} @delayShow="1000" />
           </div>
-        {{/if}}
-        {{#if (is-included @encryptable.usedEncryptedDataAttrs "password")}}
-          <div class="encryptable-container d-none d-md-block d-lg-block d-xl-block mr-0 ml-0 mr-md-2 ml-md-5 mr-lg-2 ml-lg-5 mr-xl-2 ml-xl-2">
-            <Encryptable::AttributeField @attribute="password" @row={{true}} @encryptable={{@encryptable}}
-                                         @visibleByDefault={{false}}/>
+          <div class="col-6 d-none d-md-block sent-by-row">
+            {{@encryptable.sender_name}} / {{moment-format @encryptable.createdAt "DD.MM.YYYY hh:mm"}}
           </div>
-        {{/if}}
-        {{#if (is-included @encryptable.usedEncryptedDataAttrs "email")}}
-          <div class="encryptable-container d-none d-md-block d-lg-block d-xl-block mr-0 ml-0 mr-md-2 ml-md-5 mr-lg-2 ml-lg-5 mr-xl-2 ml-xl-2">
-            <Encryptable::AttributeField @attribute="email" @row={{true}} @encryptable={{@encryptable}}
-                                         @visibleByDefault={{false}}/>
-          </div>
-        {{/if}}
-        {{#if (is-included @encryptable.usedEncryptedDataAttrs "token")}}
-          <div class="encryptable-container d-none d-md-block d-lg-block d-xl-block mr-0 ml-0 mr-md-2 ml-md-5 mr-lg-2 ml-lg-5 mr-xl-2 ml-xl-2">
-            <Encryptable::AttributeField @attribute="token" @row={{true}} @encryptable={{@encryptable}}
-                                         @visibleByDefault={{false}}/>
-          </div>
-        {{/if}}
-        {{#if (is-included @encryptable.usedEncryptedDataAttrs "pin")}}
-          <div class="encryptable-container d-none d-md-block d-lg-block d-xl-block mr-0 ml-0 mr-md-2 ml-md-5 mr-lg-2 ml-lg-5 mr-xl-2 ml-xl-2">
-            <Encryptable::AttributeField @attribute="pin" @row={{true}} @encryptable={{@encryptable}}
-                                         @visibleByDefault={{false}}/>
-          </div>
-        {{/if}}
-        {{#if (is-included @encryptable.usedEncryptedDataAttrs "custom_attr")}}
-          <div class="encryptable-container d-none d-md-block d-lg-block d-xl-block mr-0 ml-0 mr-md-2 ml-md-5 mr-lg-2 ml-lg-5 mr-xl-2 ml-xl-2">
-            <Encryptable::AttributeField @attribute="customAttr" @row={{true}} @encryptable={{@encryptable}}
-                                         @visibleByDefault={{false}}/>
-          </div>
-        {{/if}}
       {{else}}
-        <LinkTo class="col-6 underline-hover break-words account-link mt-2 mb-2 ml-2 p-0 d-none d-md-block d-lg-block d-xl-block" @route="encryptables.show"
-                @model={{@encryptable.id}}>
-          {{t "encryptable/credentials.row.clickToSeeAttrs"}}
-        </LinkTo>
+        {{#if (and (lte this.getAttributesAmount 2) (gt this.getAttributesAmount 0))}}
+          {{#if (is-included @encryptable.usedEncryptedDataAttrs "username")}}
+            <div class="encryptable-container d-none d-md-block d-lg-block d-xl-block ml-0 mr-md-2 ml-md-5 mr-lg-2 ml-lg-5 mr-xl-2 ml-xl-2">
+              <Encryptable::AttributeField @attribute="username" @row={{true}} @encryptable={{@encryptable}}
+                                           @visibleByDefault={{false}}/>
+            </div>
+          {{/if}}
+          {{#if (is-included @encryptable.usedEncryptedDataAttrs "password")}}
+            <div class="encryptable-container d-none d-md-block d-lg-block d-xl-block mr-0 ml-0 mr-md-2 ml-md-5 mr-lg-2 ml-lg-5 mr-xl-2 ml-xl-2">
+              <Encryptable::AttributeField @attribute="password" @row={{true}} @encryptable={{@encryptable}}
+                                           @visibleByDefault={{false}}/>
+            </div>
+          {{/if}}
+          {{#if (is-included @encryptable.usedEncryptedDataAttrs "email")}}
+            <div class="encryptable-container d-none d-md-block d-lg-block d-xl-block mr-0 ml-0 mr-md-2 ml-md-5 mr-lg-2 ml-lg-5 mr-xl-2 ml-xl-2">
+              <Encryptable::AttributeField @attribute="email" @row={{true}} @encryptable={{@encryptable}}
+                                           @visibleByDefault={{false}}/>
+            </div>
+          {{/if}}
+          {{#if (is-included @encryptable.usedEncryptedDataAttrs "token")}}
+            <div class="encryptable-container d-none d-md-block d-lg-block d-xl-block mr-0 ml-0 mr-md-2 ml-md-5 mr-lg-2 ml-lg-5 mr-xl-2 ml-xl-2">
+              <Encryptable::AttributeField @attribute="token" @row={{true}} @encryptable={{@encryptable}}
+                                           @visibleByDefault={{false}}/>
+            </div>
+          {{/if}}
+          {{#if (is-included @encryptable.usedEncryptedDataAttrs "pin")}}
+            <div class="encryptable-container d-none d-md-block d-lg-block d-xl-block mr-0 ml-0 mr-md-2 ml-md-5 mr-lg-2 ml-lg-5 mr-xl-2 ml-xl-2">
+              <Encryptable::AttributeField @attribute="pin" @row={{true}} @encryptable={{@encryptable}}
+                                           @visibleByDefault={{false}}/>
+            </div>
+          {{/if}}
+          {{#if (is-included @encryptable.usedEncryptedDataAttrs "custom_attr")}}
+            <div class="encryptable-container d-none d-md-block d-lg-block d-xl-block mr-0 ml-0 mr-md-2 ml-md-5 mr-lg-2 ml-lg-5 mr-xl-2 ml-xl-2">
+              <Encryptable::AttributeField @attribute="customAttr" @row={{true}} @encryptable={{@encryptable}}
+                                           @visibleByDefault={{false}}/>
+            </div>
+          {{/if}}
+        {{else}}
+          <LinkTo class="col-6 underline-hover break-words account-link mt-2 mb-2 ml-2 p-0 d-none d-md-block d-lg-block d-xl-block" @route="encryptables.show"
+                  @model={{@encryptable.id}}>
+            {{t "encryptable/credentials.row.clickToSeeAttrs"}}
+          </LinkTo>
+        {{/if}}
       {{/if}}
       <div class="col-md-auto d-none d-md-none d-lg-none d-xl-block encryptable-row-icons ml-auto">
-        <span class="mx-1" role="button" {{on "click" this.toggleEncryptableEdit}}>
-          <img class="icon-medium-button d-inline" src="/assets/images/edit.svg" alt="edit">
-          <BsTooltip @title={{t "encryptable/credentials.edit.title"}} @delayShow="500" />
-        </span>
+        {{#unless this.isTransferredCredentials }}
+          <span class="mx-1" role="button" {{on "click" this.toggleEncryptableEdit}}>
+            <img class="icon-medium-button d-inline" src="/assets/images/edit.svg" alt="edit">
+            <BsTooltip @title={{t "encryptable/credentials.edit.title"}} @delayShow="500" />
+          </span>
+        {{/unless}}
         <DeleteWithConfirmation @class="mx-1" @record={{@encryptable}} @didDelete={{this.refreshRoute}}>
           <img class="icon-medium-button d-inline" src="/assets/images/delete.svg" alt="delete">
           <BsTooltip @title={{t "tooltips.delete_encryptables"}} @delayShow="500" />
