--- a/frontend/app/templates/components/encryptable/show.hbs
+++ b/frontend/app/templates/components/encryptable/show.hbs
@@ -4,6 +4,9 @@
 {{#if this.isFileCreating}}
   <EncryptableFile::Form @class="modal_file_entry" @encryptableCredential={{@encryptable}} @title={{t "encryptable_files.new.title"}} @onAbort={{this.toggleFileNew}}/>
 {{/if}}
+{{#if this.isCredentialSharing}}
+  <CredentialTransfer @onAbort={{this.toggleCredentialSharing}} @title={{t "encryptable/transferring/credential.new.title"}} @encryptableId={{@encryptable.id}}/>
+{{/if}}
 {{#if this.isFile}}
   <div class="container px-5 pt-4 h-100 bg-white pl-none encryptable-container-smartphone mb-15">
     <div class="row mb-3">
@@ -64,23 +67,33 @@
         </a>
       </div>
       <div class="col-auto d-flex justify-content-between align-items-center">
+        <a id="share_credential_button" class="btn btn-secondary edit_button" role="button" {{on "click" this.toggleCredentialSharing}}>
+          <img class="icon-button" src="/assets/images/share-blue.svg" alt="share">
+        </a>
         <DeleteWithConfirmation @class="btn btn-light edit_button" @record={{@encryptable}} @didDelete={{this.refreshRoute}}>
           <img class="icon-button d-inline" src="/assets/images/delete.svg" alt="delete">
         </DeleteWithConfirmation>
-        <a id="edit_account_button" class="btn btn-secondary edit_button" role="button" {{on "click" this.toggleEncryptableEdit}}>
-          <img class="icon-button" src="/assets/images/edit.svg" alt="edit">
-        </a>
+        {{#unless this.isTransferredCredentials}}
+          <a id="edit_account_button" class="btn btn-secondary edit_button" role="button" {{on "click" this.toggleEncryptableEdit}}>
+            <img class="icon-button" src="/assets/images/edit.svg" alt="edit">
+          </a>
+        {{/unless}}
       </div>
     </div>
     <div class="row pb-3 justify-content-between">
       <div class="col-lg-9 accountname">
-        <h2 id="encryptable-title" class="d-inline">{{t "encryptable/credentials.show.title"}}: {{@encryptable.name}}</h2>
+        <h2 id="encryptable-title" class="d-inline">{{if this.isTransferredCredentials (t "encryptable/transferring/credential.show") (t "encryptable/credentials.show.title")}}: {{@encryptable.name}}</h2>
       </div>
       <div class="col-lg-9 accountname text-muted">
-        <br><p id="encryptable-created-at" class="d-inline">{{t "encryptable/credentials.show.created_at"}}: {{moment-format @encryptable.createdAt "DD.MM.YYYY hh:mm"}}</p>
+        <br><p id="encryptable-created-at" class="d-inline">{{if this.isTransferredCredentials (t "encryptable/transferring/credential.sent_at") (t "encryptable/credentials.show.created_at")}}: {{moment-format @encryptable.createdAt "DD.MM.YYYY hh:mm"}}</p>
          /
         <p id="encryptable-updated-at" class="d-inline">{{t "encryptable/credentials.show.last_update"}}: {{moment-format @encryptable.updatedAt "DD.MM.YYYY hh:mm"}}</p>
       </div>
+      {{#if this.isTransferredCredentials}}
+        <div class="col-lg-9">
+          <br><p class="d-inline">{{t "encryptable/transferring/file.show.sender_name"}}: {{@encryptable.sender_name}}</p>
+        </div>
+      {{/if}}
     </div>
 
     {{#if @encryptable.description}}
@@ -111,27 +124,29 @@
         <Encryptable::AttributeField @row={{false}} @attribute="customAttr" @label={{@encryptable.cleartextCustomAttrLabel}} @encryptable={{@encryptable}} @visibleByDefault={{false}}/>
       {{/if}}
     </div>
-    <div class="d-flex flex-row justify-content-between mb-2">
-      <div>
-        <h3 id="encryptable-attachments">{{t "encryptable/credentials.show.attachments"}}</h3>
+    {{#unless isTransferredCredentials}}
+      <div class="d-flex flex-row justify-content-between mb-2">
+        <div>
+          <h3 id="encryptable-attachments">{{t "encryptable/credentials.show.attachments"}}</h3>
+        </div>
+        <div>
+          <BsButton id="encryptable-add-attachment" @type="primary" {{on "click" this.toggleFileNew}}>
+            {{t "encryptable/credentials.show.add_attachment"}}
+          </BsButton>
+        </div>
       </div>
-      <div>
-        <BsButton id="encryptable-add-attachment" @type="primary" {{on "click" this.toggleFileNew}}>
-          {{t "encryptable/credentials.show.add_attachment"}}
-        </BsButton>
-      </div>
-    </div>
-    <table class="table table-striped">
-      <tbody>
-        <tr>
-          <th id="encryptable-file-label">{{t "encryptable/credentials.show.file"}}</th>
-          <th id="encryptable-file-description" class="description">{{t "description"}}</th>
-          <th id="encryptable-file-actions">{{t "actions"}}</th>
-        </tr>
-        {{#each @encryptable.encryptableFiles as |encryptableFile|}}
-          <EncryptableFile::Row @encryptableFile={{encryptableFile}}/>
-        {{/each}}
-      </tbody>
-    </table>
+      <table class="table table-striped">
+        <tbody>
+          <tr>
+            <th id="encryptable-file-label">{{t "encryptable/credentials.show.file"}}</th>
+            <th id="encryptable-file-description" class="description">{{t "description"}}</th>
+            <th id="encryptable-file-actions">{{t "actions"}}</th>
+          </tr>
+          {{#each @encryptable.encryptableFiles as |encryptableFile|}}
+            <EncryptableFile::Row @encryptableFile={{encryptableFile}}/>
+          {{/each}}
+        </tbody>
+      </table>
+    {{/unless}}
   </div>
 {{/if}}
