Add frontend validation for share credentials

--- a/frontend/app/templates/components/credential-transfer.hbs
+++ b/frontend/app/templates/components/credential-transfer.hbs
@@ -21,6 +21,6 @@
   </Modal.body>
 
   <Modal.footer>
-    <BsButton @onClick={{action this.submit this.changeset}} alt="save" @type="primary">{{t "encryptable/transferring/credential.submit"}}</BsButton>
+    <BsButton @onClick={{action this.submit this.changeset}} @disabled={{not this.changeset.isValid}} alt="save" @type="primary">{{t "encryptable/transferring/credential.submit"}}</BsButton>
   </Modal.footer>
 </BsModal>
