implement component for attribute field to use in row and show

--- a/frontend/app/styles/encryptable-show.scss
+++ b/frontend/app/styles/encryptable-show.scss
@@ -111,3 +111,7 @@
   display: grid;
   grid-template-columns: 6fr 1fr;
 }
+
+.encryptable-attributes > .hidden-attribute-copy-button {
+  width: 40%;
+}
