--- a/frontend/app/templates/components/encryptable/row.hbs
+++ b/frontend/app/templates/components/encryptable/row.hbs
@@ -36,122 +36,42 @@
     </div>
   {{else}}
     <div class="row d-flex align-items-center p-2 bg-grey-2 rounded encryptable-entry">
-      <LinkTo id="encryptable-row-title" class="col-4 underline-hover break-words account-link" @route="encryptables.show" @model={{@encryptable.id}}>
+      <LinkTo id="encryptable-row-title" class="col-3 underline-hover break-words account-link" @route="encryptables.show" @model={{@encryptable.id}}>
         {{@encryptable.name}}
       </LinkTo>
       {{#if (lte getAttributesAmount 2)}}
         {{#if @encryptable.usedAttrs.username}}
-          <div id="username-field" class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
-            <div class="hide-wrapper">
-              <Input class="d-inline form-control" id="input-password-{{@encryptable.id}}" @disabled="true" @value={{format-cleartext @encryptable "username"}}/>
-              <a role="button"
-                 class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isUsernameVisible "visibility-hidden"}}"
-                {{on "click" (action this.showAttribute "username")}}>
-                {{t "encryptable/credentials.show.show_username"}}
-              </a>
-            </div>
-          </div>
-          <div class="col px-0 d-none d-md-block encryptable-row-copy-button">
-            <button class="btn btn-light copy-btn" {{on "click" (action this.copyAttribute "username")}}
-                    disabled={{@encryptable.isUsernameBlank}} >
-              <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
-              {{#unless @encryptable.isUsernameBlank}}
-                <BsTooltip @title={{t "encryptable/credentials.show.copy_username"}} @delayShow="500" />
-              {{/unless}}
-            </button>
-          </div>
-        {{/if}}
-        {{#if @encryptable.usedAttrs.email}}
-          <div id="email-field" class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
-            <div class="hide-wrapper">
-              <Input class="d-inline form-control" id="input-password-{{@encryptable.id}}" @disabled="true" @value={{format-cleartext @encryptable "email"}}/>
-              <a role="button"
-                 class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isEmailVisible "visibility-hidden"}}"
-                {{on "click" (action this.showAttribute "email")}}>
-                {{t "encryptable/credentials.show.show_email"}}
-              </a>
-            </div>
-          </div>
-          <div class="col px-0 d-none d-md-block encryptable-row-copy-button">
-            <button class="btn btn-light copy-btn" {{on "click" (action this.copyAttribute "email")}}
-                    disabled={{@encryptable.isEmailBlank}} >
-              <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
-              {{#unless @encryptable.isEmailBlank}}
-                <BsTooltip @title={{t "encryptable/credentials.show.copy_email"}} @delayShow="500" />
-              {{/unless}}
-            </button>
+          <div class="mr-2 w-30">
+            <Encryptable::AttributeField @attribute="username" @row={{true}} @encryptable={{@encryptable}} @visibleByDefault={{false}}/>
           </div>
         {{/if}}
         {{#if @encryptable.usedAttrs.password}}
-          <div id="password-field" class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
-            <div class="hide-wrapper">
-              <Input class="d-inline form-control" @disabled="true" @value={{format-cleartext @encryptable "password"}}/>
-              <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isPasswordVisible "visibility-hidden"}}"{{on "click" (action this.showAttribute "password")}}>{{t "encryptable/credentials.show.show_password"}}</a>
-            </div>
+          <div class="mr-2 w-30">
+            <Encryptable::AttributeField @attribute="password" @row={{true}} @encryptable={{@encryptable}} @visibleByDefault={{false}}/>
           </div>
-          <div class="col pl-0 d-none d-md-block encryptable-row-copy-button">
-            <button class="btn btn-light copy-btn" {{on "click" (action this.copyAttribute "password")}}
-                    disabled={{@encryptable.isPasswordBlank}} >
-              <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
-              {{#unless @encryptable.isPasswordBlank}}
-                <BsTooltip @title={{t "encryptable/credentials.show.copy_password"}} @delayShow="500" />
-              {{/unless}}
-            </button>
+        {{/if}}
+        {{#if @encryptable.usedAttrs.email}}
+          <div class="mr-2 w-30">
+            <Encryptable::AttributeField @attribute="email" @row={{true}} @encryptable={{@encryptable}} @visibleByDefault={{false}}/>
           </div>
         {{/if}}
         {{#if @encryptable.usedAttrs.token}}
-          <div id="token-field" class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
-            <div class="hide-wrapper">
-              <Input class="d-inline form-control" @disabled="true" @value={{format-cleartext @encryptable "token"}}/>
-              <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isTokenVisible "visibility-hidden"}}"{{on "click" (action this.showAttribute "token")}}>{{t "encryptable/credentials.show.show_token"}}</a>
-            </div>
-          </div>
-          <div class="col pl-0 d-none d-md-block encryptable-row-copy-button">
-            <button class="btn btn-light copy-btn" {{on "click" (action this.copyAttribute "token")}}
-                    disabled={{@encryptable.isTokenBlank}} >
-              <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
-              {{#unless @encryptable.isTokenBlank}}
-                <BsTooltip @title={{t "encryptable/credentials.show.copy_token"}} @delayShow="500" />
-              {{/unless}}
-            </button>
+          <div class="mr-2 w-30">
+            <Encryptable::AttributeField @attribute="token" @row={{true}} @encryptable={{@encryptable}} @visibleByDefault={{false}}/>
           </div>
         {{/if}}
         {{#if @encryptable.usedAttrs.pin}}
-          <div id="pin-field" class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
-            <div class="hide-wrapper">
-              <Input class="d-inline form-control" @disabled="true" @value={{format-cleartext @encryptable "pin"}}/>
-              <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isPinVisible "visibility-hidden"}}"{{on "click" (action this.showAttribute "pin")}}>{{t "encryptable/credentials.show.show_pin"}}</a>
-            </div>
-          </div>
-          <div class="col pl-0 d-none d-md-block encryptable-row-copy-button">
-            <button class="btn btn-light copy-btn" {{on "click" (action this.copyAttribute "pin")}}
-                    disabled={{@encryptable.isPinBlank}} >
-              <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
-              {{#unless @encryptable.isPinBlank}}
-                <BsTooltip @title={{t "encryptable/credentials.show.copy_pin"}} @delayShow="500" />
-              {{/unless}}
-            </button>
+          <div class="mr-2 w-30">
+            <Encryptable::AttributeField @attribute="pin" @row={{true}} @encryptable={{@encryptable}} @visibleByDefault={{false}}/>
           </div>
         {{/if}}
         {{#if @encryptable.usedAttrs.custom_attr}}
-          <div id="custom-attr-field" class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
-            <div class="hide-wrapper">
-              <Input class="d-inline form-control" @disabled="true" @value={{format-cleartext @encryptable "customAttr"}}/>
-              <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isCustomAttrVisible "visibility-hidden"}}"{{on "click" (action this.showAttribute "customAttr")}}>{{t "encryptable/credentials.show.show_custom_attr"}}</a>
-            </div>
-          </div>
-          <div class="col pl-0 d-none d-md-block encryptable-row-copy-button">
-            <button class="btn btn-light copy-btn" {{on "click" (action this.copyAttribute "customAttr")}}
-                    disabled={{@encryptable.isCustomAttrBlank}} >
-              <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
-              {{#unless @encryptable.isCustomAttrBlank}}
-                <BsTooltip @title={{t "encryptable/credentials.show.copy_custom_attr"}} @delayShow="500" />
-              {{/unless}}
-            </button>
+          <div class="mr-2 w-30">
+            <Encryptable::AttributeField @attribute="customAttr" @row={{true}} @encryptable={{@encryptable}} @visibleByDefault={{false}}/>
           </div>
         {{/if}}
       {{else}}
-        <LinkTo class="col-4 underline-hover break-words account-link" @route="encryptables.show" @model={{@encryptable.id}}>
+        <LinkTo class="col-6 underline-hover break-words account-link" @route="encryptables.show" @model={{@encryptable.id}}>
           {{t "encryptable/credentials.row.clickToSeeAttrs"}}
         </LinkTo>
       {{/if}}
